Fixing post cover layout issues

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1,6 +1,6 @@
 .post-cover {
   position: relative;
-  height: 400px;
+  max-height: 400px;
   overflow: hidden;
 
   &:after {
@@ -15,19 +15,23 @@
   }
 
   img {
+    display: block;
     width: 100%;
   }
 
-  .post-cover-content {
-    @extend %content;
+  .post-cover-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
+    @extend %content;
 
     h1 {
-      @include cover-text();
-      color: $text-color-light;
-      position: absolute;
-      bottom: 0px;
-      margin: $margin-large 0;
+       @include cover-text();
+       color: $text-color-light;
+       position: absolute;
+       bottom: 0;
     }
   }
 }
